--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,16 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/constants/svg/Telegram.jsx",
+    "src/modules/landing/FirstScreen",
+    "src/modules/landing/SecondScreen",
+    "src/modules/landing/ThirdScreen",
+    "src/modules/landing/FourScreen"
+  ],
   "exclude": ["node_modules"]
 }
