--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.2.13",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/inputmask": "^5.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
