--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "formik": "^2.4.6",
+    "@hookform/resolvers": "^3.9.0",
     "framer-motion": "^11.2.13",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "sharp": "^0.33.4",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
