--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-remove-scroll": "^2.5.10",
     "sharp": "^0.33.4",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
