openGraph and video and blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["boty", "Chukcha", "Nilita", "Senler", "spltr", "вебинарных", "Дайбобру"]
+  "cSpell.words": ["boty", "Chukcha", "Nilita", "Senler", "spltr", "tailwindcss", "вебинарных", "Дайбобру"]
 }
