--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@next/mdx": "^14.2.5",
     "@types/mdx": "^2.0.13",
     "framer-motion": "^11.2.13",
-    "next": "14.2.3",
+    "next": "^14.2.5",
+    "next-mdx-remote": "^5.0.0",
     "preline": "^2.4.1",
     "react": "^18",
     "react-dom": "^18",
