--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
     "src/modules/landing/SecondScreen",
     "src/modules/landing/ThirdScreen",
     "src/modules/landing/FourScreen"
-, "src/constants/svg/CloseMainPopUp.jsx", "src/constants/helpers.js", "src/components/YandexMetrika/index.jsx", "src/app/api/revalidate/route.ts"  ],
+, "src/constants/svg/CloseMainPopUp.jsx"  ],
   "exclude": ["node_modules"]
 }
