--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,11 @@
     "src/modules/landing/FirstScreen",
     "src/modules/landing/SecondScreen",
     "src/modules/landing/ThirdScreen",
-    "src/modules/landing/FourScreen"
-, "src/constants/svg/CloseMainPopUp.jsx", "src/constants/helpers.js", "src/components/YandexMetrika/index.jsx", "src/app/api/revalidate/route.ts"  ],
+    "src/modules/landing/FourScreen",
+    "src/constants/svg/CloseMainPopUp.jsx",
+    "src/constants/helpers.js",
+    "src/components/YandexMetrika/index.jsx",
+    "src/app/_api/revalidate/route.ts"
+  ],
   "exclude": ["node_modules"]
 }
