--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build ",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -17,6 +18,7 @@
     "framer-motion": "^11.2.13",
     "next": "^14.2.5",
     "next-mdx-remote": "^5.0.0",
+    "next-sitemap": "^4.2.3",
     "preline": "^2.4.1",
     "react": "^18",
     "react-dom": "^18",
