--- a/.github/workflows/dev.deploy.yml
+++ b/.github/workflows/dev.deploy.yml
@@ -1,4 +1,4 @@
-name: Dev chat_boty backend workflow
+name: Dev chat_boty frontend workflow
 
 on:
   push:
@@ -27,7 +27,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/chat_boty_backend_dev:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/chat_boty_frontend_dev:latest
 
       - name: Logout from DockerHub
         run: docker logout
