--- a/.github/workflows/master.deploy.yml
+++ b/.github/workflows/master.deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build_and_push_to_docker_hub:
+  build_and_push_images_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
 
@@ -32,45 +32,24 @@ jobs:
       - name: Logout from DockerHub
         run: docker logout
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - build_and_push_to_docker_hub
-  #   steps:
-  #   - name: Checkout repo
-  #     uses: actions/checkout@v3
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_images_to_docker_hub
 
-  #   - name: Executing remote ssh commands to deploy
-  #     uses: appleboy/ssh-action@master
-  #     with:
-  #       host: ${{ secrets.SERVER_HOST }}
-  #       username: ${{ secrets.SERVER_USERNAME }}
-  #       key: ${{ secrets.SSH_KEY }}
-  #       passphrase: ${{ secrets.SSH_PASSPHRASE }}
-  #       script: |
-  #         cd AutoDocsOnline/infra
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v3
 
-  #         # Pull images
-  #         sudo docker compose -f docker-compose.production.yml pull
-
-  #         # Restart docker compose
-  #         sudo docker compose -f docker-compose.production.yml down
-  #         sudo docker compose -f docker-compose.production.yml up -d
-
-  #         # Make migrations
-  #         sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-
-  #         # clear
-  #         # sudo docker system prune --all --force
-
-  # send_message:
-  #   runs-on: ubuntu-latest
-  #   needs: deploy
-  #   steps:
-  #   - name: Send message
-  #     uses: appleboy/telegram-action@master
-  #     with:
-  #       to: ${{ secrets.TELEGRAM_ID }}
-  #       token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-  #       message: |
-  #         New version of ${{ github.event.repository.name }} was pushed successfully on production server.
+      - name: Execute remote SSH commands
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
+          passphrase: ${{ secrets.SERVER_SSH_PASSPHRASE }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: |
+            eval "$(ssh-agent -s)"
+            ssh-add <(echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}") <<< ${{ secrets.GIT_SSH_PRIVATE_PASSPHRASE }}
+            cd chat-boty-prod/
+            python3 start.py
