--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# sitemap
+/public/sitemap.xml
+/public/sitemap-0.xml
+
 # local env files
 .env*.local
 .env
