add env var MODE in building images

--- a/.github/workflows/master.deploy.yml
+++ b/.github/workflows/master.deploy.yml
@@ -8,6 +8,8 @@ jobs:
   build_and_push_images_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
+    env:
+      MODE: "production"
 
     steps:
       - name: Check out the repo
