--- a/.github/workflows/dev.deploy.yml
+++ b/.github/workflows/dev.deploy.yml
@@ -30,6 +30,8 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/chat_boty_frontend_dev:latest
+          build-args: |
+            MODE=${{ env.MODE }}
 
       - name: Logout from DockerHub
         run: docker logout
