--- a/package.json
+++ b/package.json
@@ -24,7 +24,15 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-remove-scroll": "^2.5.10",
+    "rehype-code-titles": "^1.2.0",
+    "rehype-figure": "^1.0.1",
+    "rehype-prism-plus": "^2.0.0",
+    "remark-autolink-headings": "^7.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-slug": "^7.0.1",
     "sharp": "^0.33.4",
+    "vfile": "^6.0.2",
+    "vfile-message": "^4.0.2",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
   },
