--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# sitemap
-/public/sitemap.xml
-/public/sitemap-0.xml
+# SEO
+public/sitemap*.xml
+public/robots.txt
+public/feed.xml
 
 # local env files
 .env*.local
