--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap && node scripts/generateFile.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@mdx-js/react": "^3.0.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.13",
     "next": "^14.2.5",
     "next-mdx-remote": "^5.0.0",
@@ -25,9 +26,9 @@
   "devDependencies": {
     "@mdx-js/loader": "^3.0.1",
     "@next/mdx": "^14.2.5",
-    "@types/mdx": "^2.0.13",
     "@tailwindcss/typography": "^0.5.13",
     "@types/inputmask": "^5.0.7",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
