--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["afonin", "boty", "Chukcha", "Nilita", "reuna", "Senler", "spltr", "tailwindcss", "вебинарных", "Дайбобру"]
+  "cSpell.words": ["afonin", "boty", "Chukcha", "Nilita", "reuna", "Senler", "spltr", "tailwindcss", "вебинарных", "Дайбобру", "пофиксят"]
 }
