--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap && node scripts/generateFile.js"
+    "postbuild": "node scripts/generateFile.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
