--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/react": "^3.0.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.13",
+    "morgan": "^1.10.0",
     "next": "^14.2.5",
     "next-mdx-remote": "^5.0.0",
     "preline": "^2.4.1",
@@ -21,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-remove-scroll": "^2.5.10",
+    "winston": "^3.14.2",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/inputmask": "^5.0.7",
     "@types/mdx": "^2.0.13",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
