--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@mdx-js/react": "^3.0.1",
+    "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
+    "easymde": "^2.18.0",
     "framer-motion": "^11.2.13",
+    "js-sha512": "^0.9.0",
     "morgan": "^1.10.0",
     "next": "^14.2.5",
     "next-mdx-remote": "^5.0.0",
@@ -30,6 +33,7 @@
     "@next/bundle-analyzer": "^14.2.8",
     "@next/mdx": "^14.2.5",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/cookie": "^0.6.0",
     "@types/inputmask": "^5.0.7",
     "@types/mdx": "^2.0.13",
     "@types/morgan": "^1.9.9",
