--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-remove-scroll": "^2.5.10",
+    "unified": "^11.0.5",
     "winston": "^3.14.2",
     "zustand": "^4.5.4"
   },
