no cache and robots

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,17 @@
 {
-  "cSpell.words": ["afonin", "boty", "Chukcha", "codemirror", "Nilita", "reuna", "Senler", "spltr", "tailwindcss", "вебинарных", "Дайбобру", "пофиксят"]
+  "cSpell.words": [
+    "afonin",
+    "boty",
+    "Chukcha",
+    "codemirror",
+    "Nilita",
+    "nossr",
+    "reuna",
+    "Senler",
+    "spltr",
+    "tailwindcss",
+    "вебинарных",
+    "Дайбобру",
+    "пофиксят"
+  ]
 }
