--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "boty",
     "Chukcha",
     "codemirror",
+    "Igra",
     "mailingsmain",
     "Nilita",
     "nossr",
@@ -13,6 +14,8 @@
     "tailwindcss",
     "вебинарных",
     "Дайбобру",
-    "пофиксят"
+    "Парсим",
+    "пофиксят",
+    "Рандомизируем"
   ]
 }
