--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-remove-scroll": "^2.5.10",
     "unified": "^11.0.5",
     "winston": "^3.14.2",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@mdx-js/loader": "^3.0.1",
@@ -61,7 +62,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vfile": "^6.0.2",
-    "vfile-message": "^4.0.2",
-    "yup": "^1.4.0"
+    "vfile-message": "^4.0.2"
   }
 }
