--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@mdx-js/react": "^3.0.1",
+    "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.7",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
@@ -29,8 +30,8 @@
     "react-remove-scroll": "^2.5.10",
     "unified": "^11.0.5",
     "winston": "^3.14.2",
-    "zustand": "^4.5.4",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@mdx-js/loader": "^3.0.1",
