--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.7",
     "cookie": "^0.6.0",
+    "dnd-core": "^16.0.1",
     "dotenv": "^16.4.5",
     "easymde": "^2.18.0",
     "formidable": "^3.5.1",
     "framer-motion": "^11.2.13",
+    "immutability-helper": "^3.1.1",
     "js-sha512": "^0.9.0",
     "morgan": "^1.10.0",
     "next": "^14.2.5",
     "next-mdx-remote": "^5.0.0",
     "preline": "^2.4.1",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-remove-scroll": "^2.5.10",
